lib_LTLIBRARIES = libsrsirc.la
libsrsirc_la_SOURCES = io.c conn.c irc.c util.c px.c msg.c common.c irc_msghnd.c irc_track.c irc_getset.c bucklist.c skmap.c ucbase.c cmap.c
libsrsirc_la_CPPFLAGS = -I$(top_srcdir)/include
libsrsirc_la_LIBADD = $(top_srcdir)/platform/libsrsircbase.la $(top_srcdir)/logger/libsrsirclog.la
