bin_PROGRAMS = icat iwat
icat_SOURCES = icat_core.c icat_init.c icat_misc.c icat_serv.c icat_user.c
icat_CPPFLAGS = -I$(top_srcdir)/include
icat_LDADD = ../logger/libsrsirclog.la ../libsrsirc/libsrsirc.la
iwat_SOURCES = iwat.c
iwat_CPPFLAGS = -I$(top_srcdir)/include
iwat_LDADD = ../libsrsirc/libsrsirc.la
